--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "bootstrap": "~3.0.0",
     "underscore": "~1.5.2",
     "html5shiv": "~3.7.0",
-    "respond": "~1.3.0"
+    "respond": "~1.3.0",
+    "chosen": "https://github.com/harvesthq/chosen/releases/download/1.0.0/chosen_v1.0.0.zip"
   }
 }
